css/style.css
body {
    font-family: 'Montserrat', sans-serif;
    color: #2b2b2b;
    opacity: 1;
    transition: 2s opacity;
    font-size: 16pt;
    background-color: white;
}

html{
    scroll-behavior: smooth;
}

h2 {
    display: inline !important;
}

.header{
    width: auto;
    height: 60vh;
    display: grid;
    padding: 0 20px 0 0;
    grid-template-rows: 60vh;
    grid-template-columns: 1fr 1fr;
    grid-template-areas: 
    "logo info";
    align-items: center;
    background-image: linear-gradient(to right, #00336d, #466991, #dee9f8, #ffffff, #ffffff);
    align-items: center;
    border-bottom: 3px solid #1a1a1a;
}

.bigWord{
    font-size: 555pt;
    color: #1a1a1a;
    font-family: 'Teko', sans-serif;
    padding: 20px;
}

.button{
    text-align: center;
    font-weight: bolder;
    padding: 10px 26px 10px 26px;
    max-width: 250px;
    margin: 10px 0 10px 0;
    width: auto;
    height: auto;
    transition: all .2s ease-in-out;
}

.button:hover { transform: scale(1.1); }

#contact{
    background-color: #00499C;
    color: white;
    text-decoration: none;
}

a {
    color: #00499C;
}

a:hover{
    color: rgb(0, 52, 112);
}

.personal{
    grid-area: info;
    opacity: 0;
    color: #1a1a1a;
    font-size: 2vh;
    max-height: 60vh;
    height: auto;
    animation: info 2s 1;
    animation-fill-mode: forwards;
    animation-delay: 2.5s;
}

@keyframes info{
    0%{
        opacity: 0;
    }
    100%{
        opacity: 100%;
    }
}

.box{
    position: absolute;
    top: 85%;
    left: 50%;
    transform: translate(-50%, -50%)
}

.box span{
    display: block;
    width: 30px;
    height: 30px;
    opacity: 0;
    border-bottom: 2px solid #000000;
    border-right: 2px solid #000000;
    transform: rotate(45deg);
    margin: -10px;
    animation: animate 2s infinite;
    animation-delay: 7s;
}
.box span:nth-child(2){
    animation-delay: 6.8s;
}
.box span:nth-child(3){
    animation-delay: 6.6s;
}

@keyframes animate{
    0%{
        opacity: 0;
        transform: rotate(45deg) translate(-20px,-20px);
    }
    50%{
        opacity: 1;
    }
    100%{
        opacity: 0;
        transform: rotate(45deg) translate(20px,20px);
    }
}


.container{
    width: auto;
    height: auto;
    grid-area: logo;
}

.container span{
    color: #ffffff;
    display: inline-block;
}

.text1{
    animation: text 2s 1;
    opacity: 0;
    animation-fill-mode: forwards;
    font-size: 30vw;
    color: #ffffff;
    font-family: 'Teko', sans-serif;
}

.text2{
    animation: text 2s 1;
    opacity: 0;
    animation-fill-mode: forwards;
    font-size: 30vw;
    color: #ffffff;
    font-family: 'Teko', sans-serif;
    animation-delay: 0.33s;
}

.text3{
    animation: text 2s 1;
    opacity: 0;
    animation-fill-mode: forwards;
    font-size: 30vw;
    color: #ffffff;
    font-family: 'Teko', sans-serif;
    animation-delay: 0.66s;
}

@keyframes text{
    0%{
        opacity: 0;
        color: #00336d;
        transform: translate(300%,0);
    }
    69%{
        opacity: 100%;
        color:#00336d;
    }
    70%{
        color:#00336d;
        opacity: 100%;
        transform: translate(300%,0);
    }
    100%{
        opacity: 100%;
        transform: translate(0,0);
    }
    
}

.showcase{
    margin: 0 5% 0 5%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 20vw;
    grid-template-areas: 
    "pic txt txt";
    align-items: center;
}

.gridImg{
    display: grid;
    grid-area: pic;
}

.gridText{
    padding-left: 20px;
    display: grid;
    grid-area: txt;
}

.showcase2{
    margin: 0 5% 0 5%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 20vw;
    grid-template-areas: 
    "txt2 txt2 pic2";
    align-items: center;
}

.gridImg2{
    display: grid;
    grid-area: pic2;
}

.gridText2{
    padding-left: 20px;
    display: grid;
    grid-area: txt2;
}

.showHeading{
    color: #00499C;
    font-weight: bold;
    font-size: 28pt;
    font-family: 'Teko', sans-serif;
    display: inline !important;
}

.showHiFi{
    object-fit: contain;
    text-align: center;
    max-height: 30vh;
    max-width: 500px;
    width: 30vw;
}

hr {
    display: flex;
    justify-items: flex-start;
    height: 1px;
    border: 0;
    border-top: 2px solid #1a1a1a;
    margin: 1em 0;
    padding: 0;
    width: 80vw;
}

#move {
    display: flex;
    justify-content: flex-end;
}

#footer{
    display: flex;
    justify-content: space-around;
    align-content: center;
    justify-items: center;
    height: auto;
    padding: 20px;
    background-color: rgb(75, 75, 75);
    color: white;
    font-family: Georgia, 'Times New Roman', Times, serif;
}

#footer a{
    color: white;
}

#footer a:hover{
    color: rgb(204, 204, 204);
    text-decoration: none;
}







@media only screen and (max-width: 750px) {

    body {
        font-family: 'Montserrat', sans-serif;
        color: #2b2b2b;
        opacity: 1;
        transition: 2s opacity;
        font-size: 14pt;
        background-color: white;
    }
    
    html{
        scroll-behavior: smooth;
    }
    
    .header{
        width: auto;
        height: 110vh;
        display: grid;
        padding: 0 20px 0 20px;
        grid-template-rows: 30vh 60vh;
        grid-template-columns: auto;
        grid-template-areas: 
        "logo"
        "info";
        align-items: center;
        background-image: linear-gradient(to bottom, #00336d, #8aa5c5, #ffffff, #ffffff, #ffffff);
        align-items: center;
        border-bottom: 3px solid #1a1a1a;
    }
    
    .bigWord{
        font-size: 555pt;
        color: #1a1a1a;
        font-family: 'Teko', sans-serif;
        padding: 0 0 16px 0;
    }
    
    .button{
        text-align: center;
        font-weight: bolder;
        padding: 10px 26px 10px 26px;
        max-width: 250px;
        margin: 10px 0 10px 0;
        width: auto;
        height: auto;
        transition: all .2s ease-in-out;
    }
    
    .button:hover { transform: scale(1.1); }
    
    #contact{
        background-color: #00499C;
        color: white;
        text-decoration: none;
    }
    
    a {
        color: #00499C;
    }
    
    a:hover{
        color: rgb(0, 52, 112);
    }
    
    .personal{
        grid-area: info;
        opacity: 0;
        color: #1a1a1a;
        font-size: 16pt;
        margin-top: 15vh;
        animation: info 2s 1;
        animation-fill-mode: forwards;
        animation-delay: 2.5s;
    }
    
    @keyframes info{
        0%{
            opacity: 0;
        }
        100%{
            opacity: 100%;
        }
    }
    
    
    .container{
        width: auto;
        grid-area: logo;
        padding-top: 80px;
    }
    
    .container span{
        color: #ffffff;
        display: inline-block;
    }
    
    .text1{
        animation: text 3s 1;
        opacity: 0;
        animation-fill-mode: forwards;
        font-size: 50vw;
        color: #ffffff;
        font-family: 'Teko', sans-serif;
    }
    
    .text2{
        animation: text 3s 1;
        opacity: 0;
        animation-fill-mode: forwards;
        font-size: 50vw;
        color: #ffffff;
        font-family: 'Teko', sans-serif;
        animation-delay: 0.2s;
    }
    
    .text3{
        animation: text 3s 1;
        opacity: 0;
        animation-fill-mode: forwards;
        font-size: 50vw;
        color: #ffffff;
        font-family: 'Teko', sans-serif;
        animation-delay: 0.4s;
    }
    
    @keyframes text{
        0%{
            opacity: 0;
            color:#00336d;
            transform: translate(0, 200px);
        }
        40%{
            opacity: 100%;
        }
        60%{
            opacity: 100%;
            transform: translate(0,0);
        }
        70%{
            opacity: 100%;
            transform: translate(0,0);
        }
        100%{
            opacity: 100%;
            transform: translate(0,0);
        }
        
    }
    
    .showcase{
        margin: 3% 5% 3% 5%;
        display: grid;
        grid-template-columns: auto;
        grid-template-rows: auto;
        grid-template-areas: 
        "pic"
        "txt";
        align-items: center;
    }
    
    .gridImg{
        display: grid;
        padding-bottom: 15px;
        justify-items: center;
        grid-area: pic;
    }
    
    .gridText{
        padding-left: 20px;
        display: grid;
        grid-area: txt;
    }
    
    .showcase2{
        margin: 3% 5% 3% 5%;
        display: grid;
        grid-template-columns: auto;
        grid-template-rows: auto;
        grid-template-areas: 
        "pic2"
        "txt2";
        align-items: center;
    }
    
    .gridImg2{
        justify-items: center;
        display: grid;
        grid-area: pic2;
    }
    
    .gridText2{
        display: grid;
        grid-area: txt2;
    }
    
    .showHeading{
        color: #00499C;
        font-weight: bold;
        font-size: 28pt;
        font-family: 'Teko', sans-serif;
    }
    
    .showHiFi{
        max-width: 500px;
        width: 70vw;
    }
    
    hr {
        display: flex;
        justify-items: flex-start;
        height: 1px;
        border: 0;
        border-top: 2px solid #1a1a1a;
        margin: 1em 0;
        padding: 0;
        width: 80vw;
    }
    
    #move {
        display: flex;
        justify-content: flex-end;
    }
    
    #footer{
        display: flex;
        flex-direction: column;
        height: auto;
        padding: 20px;
        background-color: rgb(75, 75, 75);
        color: white;
        font-family: Georgia, 'Times New Roman', Times, serif;
    }
    
    #footer a{
        color: white;
    }
    
    #footer a:hover{
        color: rgb(204, 204, 204);
        text-decoration: none;
    }

    .footerMobile{
        display: flex;
        justify-content: center;
        padding: 20px;
    }

}

